# protoc-gen-go-grpc-mock

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod
